Updated Home visuals.

--- a/plugins/cleanse/kingofart/controllers/home/index.htm
+++ b/plugins/cleanse/kingofart/controllers/home/index.htm
@@ -1,7 +1,7 @@
-<div class="p-x">
-    <h1 class="br-p"><?= $pageTitle ?></h1>
+<div class="koa-home-wrapper p-x">
+    <h1><?= $pageTitle ?></h1>
 
-    <div class="messages-container p-a bg-primary">
+    <div class="messages-container">
         <h3>Messages</h3>
 
         <p>
@@ -9,7 +9,7 @@
         </p>
 
         <div class="control-toolbar">
-            <div class="toolbar-item toolbar-primary">
+            <div class="toolbar-item toolbar-secondary">
                 <div data-control="toolbar">
                     <a href="messages" class="btn btn-primary oc-icon-copy">All Messages</a>
                 </div>
@@ -28,7 +28,7 @@
 
     <hr>
 
-    <div class="creations-container p-a bg-primary">
+    <div class="creations-container">
         <h3>Art Gallery</h3>
 
         <p>
